--- a/Lazy2/Lazy2/Info.plist
+++ b/Lazy2/Lazy2/Info.plist
@@ -2,6 +2,23 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>UIApplicationshortcutltems</key>
+	<array>
+		<dict>
+			<key>UIApplicationShortcutltemType</key>
+			<string></string>
+			<key>UIApplicationShortcutltemTitle</key>
+			<string>NextVC</string>
+			<key>UIApplicationShortcutltemSubtitle</key>
+			<string>Lazy</string>
+			<key>UIApplicationShortcutltemIconType</key>
+			<string></string>
+			<key>UIApplicationShortcutltemIconFile</key>
+			<string></string>
+			<key>UIApplicationShortcutltemUserInfo</key>
+			<string></string>
+		</dict>
+	</array>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleExecutable</key>
